--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <!-- Header Section -->
   <header>
-    <h1>Your Name</h1>
-    <p>Backend Software Engineer</p>
+    <h1>Venkata Palaka</h1>
+    <p>Software Engineer</p>
   </header>
 
   <!-- Projects Section -->
@@ -39,8 +39,8 @@
 
   <!-- Footer Section -->
   <footer>
-    <p>Contact: your.email@example.com</p>
-    <p>LinkedIn: <a href="link-to-linkedin">Your LinkedIn Profile</a></p>
+    <p>Contact: pvg413@example.com</p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/venkatagangadharnaveenpalaka/">LinkedIn Profile</a></p>
   </footer>
 
   <!-- JavaScript file (if needed) -->
