--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <h1>Venkata Palaka</h1>
     <p>Software Engineer</p>
-    <img src="media/my-photo.jpg" alt="Your Photo" class="profile-photo">
+    <img src="/media/my-photo.jpg" alt="Your Photo" class="profile-photo">
   </header>
 
   <!-- Projects Section -->
@@ -42,10 +42,10 @@
   <footer>
     <p>Connect with me:</p>
     <a href="https://www.linkedin.com/in/venkatagangadharnaveenpalaka/" target="_blank" rel="noopener noreferrer">
-    <img src="linkedin-icon.png" alt="LinkedIn" class="icon">
+    <img src="/media/linkedin-icon.png" alt="LinkedIn" class="icon">
     </a>
     <a href="https://github.com/your-github-username" target="_blank" rel="noopener noreferrer">
-    <img src="github-icon.png" alt="GitHub" class="icon">
+    <img src="/media/github-icon.png" alt="GitHub" class="icon">
     </a>
     <p>Contact: pvg413@example.com</p>
   </footer>
