update more details

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <h1>Venkata Palaka</h1>
     <p>Software Engineer</p>
     <img src="media/my-photo.jpg" alt="Your Photo" class="profile-photo">
+    <a href="https://www.linkedin.com/in/venkatagangadharnaveenpalaka/" target="_blank" rel="noopener noreferrer">
+      <img src="media/linkedin-icon.png" alt="LinkedIn" class="icon">
+      </a>
+      <a href="https://github.com/naveenpvg3" target="_blank" rel="noopener noreferrer">
+      <img src="media/github-icon.png" alt="GitHub" class="icon">
+      </a>
+      <a href="https://leetcode.com/venkata_palaka/" target="_blank" rel="noopener noreferrer">
+        <img src="media/leetcode-icon.png" alt="leetcode" class="icon">
+        </a>
   </header>
 
   <!-- Projects Section -->
@@ -30,23 +39,100 @@
   <!-- Skills Section -->
   <section id="skills">
     <!-- Skill List -->
+    <h2>Web Technologies</h2>
     <ul>
-      <li>Python</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li> 
+      <li>ReactJS</li>
+      <li>NodeJS</li>
+      <li>PHP</li>  
       <li>Django</li>
-      <li>JavaScript</li>
+    </ul>
+    
+    <h2>Programming</h2>
+    <ul>
+      <li>C</li>
+      <li>C++</li>
+      <li>Python</li>
+      <li>JAVA</li>
+      <li>R</li>
       <!-- Add more skills as needed -->
     </ul>
+
+    <h2>Database</h2>
+    <ul>
+      <li>MySQL</li>
+      <li>PostgreSQL</li>
+      <li>MongoDB</li>
+      <!-- Add more skills as needed -->
+    </ul>
+
+    //Add Data Science skills
+    <h2>Data Science</h2>
+    <ul>
+      <li>Python</li>
+      <li>R</li>
+      <li>SQL</li>
+      <li>Tableau</li>
+      <li>Power BI</li>
+      <li>Excel</li>
+      <li>Machine Learning</li>
+      <li>Deep Learning</li>
+      <li>Statistics</li>
+      <li>Mathematics</li>
+      <li>Probability</li>
+      <li>Algorithms</li>
+      <li>Data Structures</li>
+      <li>Data Visualization</li>
+      <li>Data Analysis</li>
+      <li>Data Mining</li>
+      <li>Big Data</li>
+      <li>Business Intelligence</li>
+      <li>Business Analytics</li>
+      <li>Business Analysis</li>
+      <li>ETL</li>
+      <li>Database</li>
+      <li>SQL</li>
+      <li>MySQL</li>
+      <li>PostgreSQL</li>
+      <li>MongoDB</li>
+      <li>Web Scraping</li>
+      <li>Tableau</li>
+      <li>Power BI</li>
+      <li>Excel</li>
+      <li>Machine Learning</li>
+      <li>Deep Learning</li>
+      <li>Statistics</li>
+      <li>Mathematics</li>
+      <li>Probability</li>
+      <li>Algorithms</li>
+      <li>Data Structures</li>
+      <li>Data Visualization</li>
+      <li>Data Analysis</li>
+      <li>Data Mining</li>
+      <li>Big Data</li>
+      <li>Business Intelligence</li>
+      <li>Business Analytics</li>
+      <li>Business Analysis</li>
+      <li>ETL</li>
+      <li>Database</li>
+      <li>SQL</li>
+      <li>MySQL</li>
+      <li>PostgreSQL</li>
+      <li>MongoDB</li>
+      <li>Web Scraping</li>
+      <li>Tableau</li>
+      <li>Power BI</li>
+      <li>Excel</li>
+      <li>Machine Learning</li>
+      <li>Deep Learning</li>
+      <li>Statistics</li>
+      <li>Mathematics
   </section>
 
   <!-- Footer Section -->
   <footer>
-    <p>Connect with me:</p>
-    <a href="https://www.linkedin.com/in/venkatagangadharnaveenpalaka/" target="_blank" rel="noopener noreferrer">
-    <img src="media/linkedin-icon.png" alt="LinkedIn" class="icon">
-    </a>
-    <a href="https://github.com/naveenpvg3" target="_blank" rel="noopener noreferrer">
-    <img src="media/github-icon.png" alt="GitHub" class="icon">
-    </a>
     <p>Contact: pvg413@example.com</p>
   </footer>
 
