--- a/index.html
+++ b/index.html
@@ -24,116 +24,14 @@
         </a>
   </header>
 
-  <!-- Projects Section -->
-  <section id="projects">
-    <!-- Project Cards -->
-    <div class="project-card">
-      <h2>Project 1</h2>
-      <p>Description of Project 1.</p>
-      <a href="link-to-repo-1">GitHub Repository</a>
-    </div>
-
-    <!-- Add more project cards as needed -->
-  </section>
-
-  <!-- Skills Section -->
+ <!-- Skills Section -->
   <section id="skills">
-    <!-- Skill List -->
-    <h2>Web Technologies</h2>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li> 
-      <li>ReactJS</li>
-      <li>NodeJS</li>
-      <li>PHP</li>  
-      <li>Django</li>
-    </ul>
-    
-    <h2>Programming</h2>
-    <ul>
-      <li>C</li>
-      <li>C++</li>
-      <li>Python</li>
-      <li>JAVA</li>
-      <li>R</li>
-      <!-- Add more skills as needed -->
-    </ul>
-
-    <h2>Database</h2>
-    <ul>
-      <li>MySQL</li>
-      <li>PostgreSQL</li>
-      <li>MongoDB</li>
-      <!-- Add more skills as needed -->
-    </ul>
-
-    //Add Data Science skills
-    <h2>Data Science</h2>
-    <ul>
-      <li>Python</li>
-      <li>R</li>
-      <li>SQL</li>
-      <li>Tableau</li>
-      <li>Power BI</li>
-      <li>Excel</li>
-      <li>Machine Learning</li>
-      <li>Deep Learning</li>
-      <li>Statistics</li>
-      <li>Mathematics</li>
-      <li>Probability</li>
-      <li>Algorithms</li>
-      <li>Data Structures</li>
-      <li>Data Visualization</li>
-      <li>Data Analysis</li>
-      <li>Data Mining</li>
-      <li>Big Data</li>
-      <li>Business Intelligence</li>
-      <li>Business Analytics</li>
-      <li>Business Analysis</li>
-      <li>ETL</li>
-      <li>Database</li>
-      <li>SQL</li>
-      <li>MySQL</li>
-      <li>PostgreSQL</li>
-      <li>MongoDB</li>
-      <li>Web Scraping</li>
-      <li>Tableau</li>
-      <li>Power BI</li>
-      <li>Excel</li>
-      <li>Machine Learning</li>
-      <li>Deep Learning</li>
-      <li>Statistics</li>
-      <li>Mathematics</li>
-      <li>Probability</li>
-      <li>Algorithms</li>
-      <li>Data Structures</li>
-      <li>Data Visualization</li>
-      <li>Data Analysis</li>
-      <li>Data Mining</li>
-      <li>Big Data</li>
-      <li>Business Intelligence</li>
-      <li>Business Analytics</li>
-      <li>Business Analysis</li>
-      <li>ETL</li>
-      <li>Database</li>
-      <li>SQL</li>
-      <li>MySQL</li>
-      <li>PostgreSQL</li>
-      <li>MongoDB</li>
-      <li>Web Scraping</li>
-      <li>Tableau</li>
-      <li>Power BI</li>
-      <li>Excel</li>
-      <li>Machine Learning</li>
-      <li>Deep Learning</li>
-      <li>Statistics</li>
-      <li>Mathematics
+    <script src="script.js"></script>
   </section>
 
   <!-- Footer Section -->
   <footer>
-    <p>Contact: pvg413@example.com</p>
+    <p>Happy World</p>
   </footer>
 
   <!-- JavaScript file (if needed) -->
