--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
  <!-- Skills Section -->
   <section id="skills">
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
   </section>
 
   <!-- Footer Section -->
