--- a/index.html
+++ b/index.html
@@ -24,10 +24,22 @@
         </a>
   </header>
 
+  <!-- Projects Section -->
+  <section id="projects">
+    <!-- Project Cards -->
+    <div class="project-card">
+      <h2>Project 1</h2>
+      <p>Description of Project 1.</p>
+      <a href="link-to-repo-1">GitHub Repository</a>
+    </div>
+    </section>
   <!-- Footer Section -->
   <footer>
     <p>Happy World</p>
   </footer>
+
+  <!-- JavaScript file (if needed) -->
+  <script src="script.js"></script>
 
 </body>
 </html>
