--- a/index.html
+++ b/index.html
@@ -10,18 +10,24 @@
 <body>
   <!-- Header Section -->
   <header>
-    <h1>Venkata Palaka</h1>
-    <p>Software Engineer</p>
-    <img src="media/my-photo.jpg" alt="Your Photo" class="profile-photo">
-    <a href="https://www.linkedin.com/in/venkatagangadharnaveenpalaka/" target="_blank" rel="noopener noreferrer">
-      <img src="media/linkedin-icon.png" alt="LinkedIn" class="icon">
-      </a>
-      <a href="https://github.com/naveenpvg3" target="_blank" rel="noopener noreferrer">
-      <img src="media/github-icon.png" alt="GitHub" class="icon">
-      </a>
-      <a href="https://leetcode.com/venkata_palaka/" target="_blank" rel="noopener noreferrer">
-        <img src="media/leetcode-icon.png" alt="leetcode" class="icon">
+    <div class="header-content">
+      <div class="profile-section">
+        <img src="media/my-photo.jpg" alt="Your Photo" class="profile-photo">
+        <h1>Venkata Palaka</h1>
+        <p>Software Engineer</p>
+      </div>
+      <div class="icons-section">
+        <a href="https://www.linkedin.com/in/venkatagangadharnaveenpalaka/" target="_blank" rel="noopener noreferrer">
+          <img src="media/linkedin-icon.png" alt="LinkedIn" class="icon">
         </a>
+        <a href="https://github.com/naveenpvg3" target="_blank" rel="noopener noreferrer">
+          <img src="media/github-icon.png" alt="GitHub" class="icon">
+        </a>
+        <a href="https://leetcode.com/venkata_palaka/" target="_blank" rel="noopener noreferrer">
+          <img src="media/leetcode-icon.png" alt="leetcode" class="icon">
+        </a>
+      </div>
+    </div>
   </header>
 
   <!-- Projects Section -->
@@ -32,10 +38,11 @@
       <p>Description of Project 1.</p>
       <a href="link-to-repo-1">GitHub Repository</a>
     </div>
-    </section>
+  </section>
+
   <!-- Footer Section -->
   <footer>
-    <p>Happy World</p>
+    <p>"Have the courage to follow your heart and intuition" - Steve Jobs</p>
   </footer>
 
   <!-- JavaScript file (if needed) -->
