--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <title>Your Portfolio</title>
 </head>
 <body>
+  <!-- Navigation Section -->
+  <nav>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about-me">About Me</a></li>
+      <li><a href="#educational">Educational</a></li>
+      <li><a href="#work-experience">Work Experience</a></li>
+      <li><a href="#skillset">Skillset</a></li>
+    </ul>
+  </nav>
+
   <!-- Header Section -->
   <header>
     <div class="header-content">
@@ -30,14 +41,35 @@
     </div>
   </header>
 
-  <!-- Projects Section -->
-  <section id="projects">
-    <!-- Project Cards -->
-    <div class="project-card">
-      <h2>Project 1</h2>
-      <p>Description of Project 1.</p>
-      <a href="link-to-repo-1">GitHub Repository</a>
-    </div>
+  <!-- Home Section -->
+  <section id="home">
+    <h2>Welcome to My Portfolio!</h2>
+    <p>Explore and learn more about my journey and skills.</p>
+  </section>
+
+  <!-- About Me Section -->
+  <section id="about-me">
+    <h2>About Me</h2>
+    <p>Provide a brief overview of yourself, your interests, and your career goals.</p>
+  </section>
+
+  <!-- Educational Section -->
+  <section id="educational">
+    <h2>Educational Background</h2>
+    <p>Share details about your academic qualifications and achievements.</p>
+  </section>
+
+  <!-- Work Experience Section -->
+  <section id="work-experience">
+    <h2>Work Experience</h2>
+    <p>Highlight your professional experience, including roles and responsibilities.</p>
+  </section>
+
+  <!-- Skillset Section -->
+  <section id="skillset">
+    <!-- Skill Categories and List can go here -->
+    <h2>Skillset</h2>
+    <p>List your skills in various categories.</p>
   </section>
 
   <!-- Footer Section -->
