--- a/index.html
+++ b/index.html
@@ -66,11 +66,30 @@
   </section>
 
   <!-- Skillset Section -->
-  <section id="skillset">
-    <!-- Skill Categories and List can go here -->
-    <h2>Skillset</h2>
-    <p>List your skills in various categories.</p>
-  </section>
+<section id="skillset">
+  <!-- Skill Categories and List can go here -->
+  <div class="skill-category">
+    <h2>Web Technologies</h2>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>ReactJS</li>
+      <!-- Add more skills as needed -->
+    </ul>
+  </div>
+
+  <div class="skill-category">
+    <h2>Programming</h2>
+    <ul>
+      <li>Python</li>
+      <li>JAVA</li>
+      <!-- Add more skills as needed -->
+    </ul>
+  </div>
+
+  <!-- Add more skill categories as needed -->
+</section>
 
   <!-- Footer Section -->
   <footer>
