--- a/index.html
+++ b/index.html
@@ -47,25 +47,47 @@
     <p>Explore and learn more about my journey and skills.</p>
   </section>
 
-    <!-- About Me Section -->
-  <section id="about-me">
-    <h2>About Me</h2>
-    <p>Hello! I'm Venkata Palaka, a passionate Software Engineer with a keen interest in the fascinating world of Data Science. My journey in the tech realm has been a dynamic exploration of problem-solving, creativity, and continuous learning.</p>
+  <!-- About Me Section -->
+<section id="about-me">
+  <h2>About Me</h2>
 
+  <!-- Professional Background -->
+  <div class="about-subsection">
     <h3>Professional Background</h3>
-    <p>I hold a strong foundation in software engineering, specializing in backend development and building robust, scalable systems. My expertise extends to crafting efficient algorithms and implementing innovative solutions to complex problems.</p>
+    <p>Hello! I'm Venkata Palaka, a passionate Software Engineer with a keen interest in the fascinating world of Data Science. My journey in the tech realm has been a dynamic exploration of problem-solving, creativity, and continuous learning.</p>
+  </div>
 
+  <!-- Software Engineering -->
+  <div class="about-subsection">
+    <h3>Software Engineering</h3>
+    <p>I hold a strong foundation in software engineering, specializing in backend development and building robust, scalable systems. My expertise extends to crafting efficient algorithms and implementing innovative solutions to complex problems.</p>
+  </div>
+
+  <!-- Data Science Enthusiast -->
+  <div class="about-subsection">
     <h3>Data Science Enthusiast</h3>
     <p>Driven by a curiosity to uncover meaningful insights from data, I am deeply immersed in the realm of Data Science. I have hands-on experience in leveraging data to derive actionable intelligence, employing techniques such as machine learning, statistical analysis, and data visualization.</p>
+  </div>
 
+  <!-- Continuous Learner -->
+  <div class="about-subsection">
     <h3>Continuous Learner</h3>
     <p>In the ever-evolving tech landscape, I embrace a mindset of continuous learning. I am committed to staying abreast of the latest industry trends, tools, and methodologies.</p>
+  </div>
 
+  <!-- Outside the Code -->
+  <div class="about-subsection">
     <h3>Outside the Code</h3>
     <p>Beyond the screen and lines of code, you'll find me engaging in diverse interests. I am an avid reader, fascinated by the intersection of technology and society. I enjoy exploring the outdoors, capturing moments through my lens, and finding inspiration in the world around me.</p>
+  </div>
 
-    <p>Let's connect, share ideas, and make an impact in the world of technology!</p>
-  </section>
+  <!-- Let's Connect -->
+  <div class="about-subsection">
+    <h3>Let's Connect!</h3>
+    <p>I am always open to collaborations, discussions, and new opportunities. Whether it's about a fascinating tech project, a data science challenge, or just a friendly chat, feel free to reach out. Let's connect, share ideas, and make an impact in the world of technology!</p>
+  </div>
+</section>
+
 
   <!-- Educational Section -->
   <section id="educational">
