--- a/index.html
+++ b/index.html
@@ -19,27 +19,31 @@
     </ul>
   </nav>
 
-  <!-- Header Section -->
-  <header>
-    <div class="header-content">
-      <div class="profile-section">
-        <img src="media/my-photo.jpg" alt="Your Photo" class="profile-photo">
-        <h1>Venkata Palaka</h1>
-        <p>Software Engineer</p>
-      </div>
-      <div class="icons-section">
-        <a href="https://www.linkedin.com/in/venkatagangadharnaveenpalaka/" target="_blank" rel="noopener noreferrer">
-          <img src="media/linkedin-icon.png" alt="LinkedIn" class="icon">
-        </a>
-        <a href="https://github.com/naveenpvg3" target="_blank" rel="noopener noreferrer">
-          <img src="media/github-icon.png" alt="GitHub" class="icon">
-        </a>
-        <a href="https://leetcode.com/venkata_palaka/" target="_blank" rel="noopener noreferrer">
-          <img src="media/leetcode-icon.png" alt="leetcode" class="icon">
-        </a>
-      </div>
+  <!-- header -->
+<header>
+  <div class="header-content">
+    <div class="profile-section">
+      <img src="media/my-photo.jpg" alt="Your Photo" class="profile-photo">
+      <h1>Venkata Palaka</h1>
+      <p>
+        Software Engineer
+        <img src="media/amazon-icon.png" alt="Amazon" class="company-logo">
+      </p>
     </div>
-  </header>
+    <div class="icons-section">
+      <a href="https://www.linkedin.com/in/venkatagangadharnaveenpalaka/" target="_blank" rel="noopener noreferrer">
+        <img src="media/linkedin-icon.png" alt="LinkedIn" class="icon">
+      </a>
+      <a href="https://github.com/naveenpvg3" target="_blank" rel="noopener noreferrer">
+        <img src="media/github-icon.png" alt="GitHub" class="icon">
+      </a>
+      <a href="https://leetcode.com/venkata_palaka/" target="_blank" rel="noopener noreferrer">
+        <img src="media/leetcode-icon.png" alt="leetcode" class="icon">
+      </a>
+    </div>
+  </div>
+</header>
+
 
   <!-- Home Section -->
   <section id="home">
