--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Venkata Palaka</h1>
       <p>
         Software Engineer
-        <img src="media/amazon-icon.png" alt="Amazon" class="company-logo">
+        <img src="media/amazon-icon.png" alt="Amazon" class="icon">
       </p>
     </div>
     <div class="icons-section">
