--- a/index.html
+++ b/index.html
@@ -45,11 +45,14 @@
 </header>
 
 
-  <!-- Home Section -->
-  <section id="home">
+<!-- Home Section -->
+<section id="home">
+  <div class="home-content">
     <h2>Welcome to My Portfolio!</h2>
     <p>Explore and learn more about my journey and skills.</p>
-  </section>
+  </div>
+</section>
+
 
   <!-- About Me Section -->
 <section id="about-me">
