--- a/index.html
+++ b/index.html
@@ -115,10 +115,37 @@
 
 
   <!-- Work Experience Section -->
-  <section id="work-experience">
-    <h2>Work Experience</h2>
-    <p>Highlight your professional experience, including roles and responsibilities.</p>
-  </section>
+   <section id="work-experience">
+        <h2>Work Experience</h2>
+        <p>Highlight your professional experience, including roles and responsibilities.</p>
+
+        <div class="experience">
+            <div class="job-title">Software Development Engineer, Amazon Web Services (AWS)</div>
+            <div class="date">Sept 2022 - Present</div>
+        </div>
+
+       <div class="experience">
+            <div class="job-title">Graduate Student Researcher, The George Washington University, Washington, DC</div>
+            <div class="date">Oct 2021 – June 2022</div>
+        </div>
+
+       <div class="experience">
+            <div class="job-title">Graduate Student Teaching Assistant, The George Washington University, Washington, DC</div>
+            <div class="date">Aug 2021 – Dec 2021</div>
+        </div>
+
+       <div class="experience">
+            <div class="job-title">Applied Data Science Intern, Basil Labs, Washington, DC</div>
+            <div class="date">Oct 2021 – Dec 2021</div>
+        </div>
+
+        <div class="experience">
+            <div class="job-title">Machine Learning Intern, Tech For Good. Inc, Boston (Remote, NGO)</div>
+            <div class="date">June 2021 – Aug 2021</div>
+        </div>
+        
+    </section>
+
 
   <!-- Skillset Section -->
 <section id="skillset">
